# fantoccini_iframe_example

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
static/: index.html
