[package]
name = "fantoccini_iframe_example"
version = "0.1.0"
authors = ["Henry Zimmerman <hzimmerm@akamai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = { git = "https://github.com/hgzimmerman/fantoccini.git", branch="frame_support"}
tokio = {version = "0.2.11", features = ["full"]}